Other_WIP/Affine/affine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine-main
  labels:
    app: affine
spec:
  selector:
    matchLabels:
      app: affine
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: affine
    spec:
      containers:
      - name: affine-main
        image: ghcr.io/toeverything/affine-graphql:stable
        command: ['sh', '-c', 'node ./scripts/self-host-predeploy && node ./dist/index.js']
        volumeMounts:
        - mountPath: /root/.affine/config
          name: affine-config
        - mountPath: /root/.affine/storage
          name: affine-data
      volumes:
      - name: affine-config
        hostPath:
          path: "/data/affine_config"
      - name: affine-data
        hostPath:
          path: "/data/affine_data"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: affine
spec:
  ports:
    - port: 3010
      targetPort: 3010
      protocol: TCP
  selector:
    app: affine
