Other_WIP/Affine/postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine-postgres
  labels:
    app: affine-postgres
spec:
  selector:
    matchLabels:
      app: affine-postgres
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: affine-postgres
    spec:
      containers:
      - name: affine-postgres
        image: postgres:16.4-alpine3.20
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      volumes:
      - name: postgres-data
        hostPath:
          path: "/data/affine_postgres"
      restartPolicy: Always
      # nodeSelector:
      #   kubernetes.io/hostname: "htz1"
---
apiVersion: v1
kind: Service
metadata:
  name: affine-postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: affine-postgres
